Version history: 0.75
 * Add signal handler for SIGPIPE to stop less from aborting the script
   prematurely.
 * Silence warnings when the script informs you that you're missing the conf
   file.
 * Try to build modules even if one failed in the update process.

Version history: 0.74
 * Fixed bug processing command line options where --help would call the wrong
   exit routine, leading to some warnings.  I had a fix for this myself, but
   someone sent a (correct) patch, which I couldn't help but to apply.  Thanks
   Kurt!
 * On the same note, the --install option wouldn't work right either because
   we need the conf file to be loaded, but that can't happen until the
   'simple' options like --help, --version, and --author are done.  So now
   options which require an argument set a flag, and the processing is done
   later.
 * Add feature for Amilcar, failed packages will display the path to the
   appropriate log file.
 * Another feature, automatically refresh build system if a Makefile.am is
   added.

Version history: 0.73
 * Added support for timing a build to the program.  Each make attempt is
   timed, along with the install process, and the overall time spent trying to
   install.
 * I can't seem to find a way to separate compilation and linking with
   unsermake, so there will be no such option forthcoming.

Version history: 0.73-pre1
 * Improved autorebuilder process.  Now the module's build directory won't be
   unnecessarily cleaned.
 * Added new configuration file option make-install-prefix.
 * Added exception handling to the main loop.  You should never again have the
   script crash and then have it complain that it's still running.
 * The build process now outputs to a file called build-status in the log
   directory for that run, which reports on the success/failure of each build
   attempt.
 * Fix a bug with use-qt-builddir-hack that caused it to affect all modules
   during the build system setup instead of just qt-copy.