@@ -65,7 +65,13 @@ those who either can't or don't feel like installing it.</p>
 <p id="emailaddy">It is authored by Michael Pyne (mpyne (AT) grammarian (DOT) homelinux 
 (DOT) net), and is one of several build scripts for this purpose.</p>
 
-<p><b>2004-Jun-23:</b> v0.75<br/>
+<p><b>2004-Jul-02:</b> v0.75<br/>
+New features:
+<ul>
+<li>Added the <a href="#cmdline-rc-file">--rc-file</a> command line option,
+as suggested by Kurt Hindenburg.</li>
+</ul>
+
 Bugfixes:
 <ul>
 <li>Add a signal handler for SIGPIPE to keep the script from leaving lockfiles
@@ -812,6 +818,10 @@ start building from as the next parameter on the command line.  This option
 implies <a href="#cmdline-no-cvs">--no-cvs</a>.  You should not specify
 other module names on the command line.</li>
 
+<li id="cmdline-rc-file">--rc-file, which interprets the next command line
+parameter as the file to read the configuration options from.  The default
+value for this parameter is ~/.kdecvs-buildrc.</li>
+
 <li id="cmdline-build-system-only">--build-system-only, Stop after runnning
 make -f Makefile.cvs.  The configure script will still need to be run, which
 kdecvs-build will do next time.  This lets you prepare all the configure
@@ -842,7 +852,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Sat Jun 26 04:10:20 2004</font>
+Last modified: Fri Jul  2 03:13:24 2004</font>
 </div>
 </body>
 </html>
