@@ -4,6 +4,7 @@ Version history: 0.75
  * Silence warnings when the script informs you that you're missing the conf
    file.
  * Try to build modules even if one failed in the update process.
+ * Added --rc-file option.
 
 Version history: 0.74
  * Fixed bug processing command line options where --help would call the wrong
